tests/fixtures/invalid/pow_dict_str_str.py
# Cannot call pow() with Dict[str, int], Str, Str
x = pow({"a": 1}, "hello", "hello")
